--- a/web/themes/custom/commerce_2_demo/sass/custom/style.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/style.scss
@@ -17,6 +17,7 @@
 @import 'site_header';
 @import 'site_footer';
 @import 'pages/homepage';
+@import 'pages/contact';
 @import 'pages/blog';
 @import 'pages/product';
 @import 'pages/product_uh-axe';
