--- a/web/themes/custom/commerce_2_demo/templates/pages/page--contact-us.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/page--contact-us.html.twig
@@ -45,14 +45,14 @@
  * @see html.html.twig
  */
 #}
-{#
-  Render sidebar to be able to check if it is truly empty.
-  IMPORTANT: Only works when debug is OFF.
-  Issue: https://www.drupal.org/node/953034.
-#}
-{% set page_sidebar_rendered = render_var(page.page_sidebar) %}
+
+{% set page_sidebar_rendered = page.page_sidebar|render %}
+{% set page_sidebar_exists = page_sidebar_rendered|striptags('<a><img>')|trim ? true : false %}
+
 {# Set row and column class based on sidebar. #}
-{% set col_class = page_sidebar_rendered ? 'col-sm-12 col-md-6' : 'col-sm-12' %}
+{% set row_class = page_sidebar_exists ? 'row-sidebar row-eq-height' %}
+{% set col_class = page_sidebar_exists ? 'col-sm-12 col-md-6' : 'col-sm-12' %}
+{% set content_class = page_sidebar_exists ? 'content__main-content--with-sidebar' %}
 
 {# Site Header. #}
 {% include base_path ~ directory ~ '/templates/pages/includes/site_header.html.twig' %}
@@ -76,9 +76,9 @@
       </div>
     {% endif %}
 
-    <div class="row">
+    <div class="row {{ row_class }}">
       <div class="{{ col_class }}">
-        <main class="content__main-content clearfix" role="main">
+        <main class="content__main-content {{ content_class }} clearfix" role="main">
           <div class="visually-hidden"><a id="main-content" tabindex="-1"></a></div>
           {% if page.content %}
             {{ page.content }}
@@ -86,7 +86,7 @@
         </main>
       </div>
 
-      {% if page_sidebar_rendered %}
+      {% if page_sidebar_exists %}
         <div class="col-sm-12 col-md-6">
           <aside class="site-sidebar site-sidebar--contact" role="complementary">
             {{ page.page_sidebar }}
