--- a/web/themes/custom/commerce_2_demo/templates/pages/page--products.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/page--products.html.twig
@@ -88,7 +88,7 @@
     <div class="row {{ row_class }}">
       {% if page_sidebar_rendered %}
         <div class="col-sm-3 col-md-2 hidden-xs">
-          <aside class="site-sidebar site-sidebar--desktop" role="complementary">
+          <aside class="site-sidebar site-sidebar--desktop site-sidebar--products" role="complementary">
             {{ page.page_sidebar }}
           </aside>
         </div>
