--- a/web/themes/custom/commerce_2_demo/templates/pages/page.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/page.html.twig
@@ -45,15 +45,13 @@
  * @see html.html.twig
  */
 #}
-{#
-  Render sidebar to be able to check if it is truly empty.
-  IMPORTANT: Only works when debug is OFF.
-  Issue: https://www.drupal.org/node/953034.
-#}
-{% set page_sidebar_rendered = render_var(page.page_sidebar) %}
+{% set page_sidebar_rendered = page.page_sidebar|render %}
+{% set page_sidebar_exists = page_sidebar_rendered|striptags('<a><img>')|trim ? true : false %}
+
 {# Set row and column class based on sidebar. #}
-{% set row_class = page_sidebar_rendered ? 'row-sidebar row-eq-height' %}
-{% set col_class = page_sidebar_rendered ? 'col-sm-9 col-md-10' : 'col-sm-12' %}
+{% set row_class = page_sidebar_exists ? 'row-sidebar row-eq-height' %}
+{% set col_class = page_sidebar_exists ? 'col-sm-8 col-md-9' : 'col-sm-12' %}
+{% set content_class = page_sidebar_exists ? 'content__main-content--with-sidebar' %}
 
 {# Site Header. #}
 {% include base_path ~ directory ~ '/templates/pages/includes/site_header.html.twig' %}
@@ -63,8 +61,8 @@
 <div class="site-content">
   <div class="container">
     <div class="row {{ row_class }}">
-      {% if page_sidebar_rendered %}
-        <div class="col-sm-3 col-md-2 hidden-xs">
+      {% if page_sidebar_exists %}
+        <div class="col-sm-4 col-md-3 hidden-xs">
           <aside class="site-sidebar" role="complementary">
             {{ page.page_sidebar }}
           </aside>
@@ -72,7 +70,7 @@
       {% endif %}
 
       <div class="{{ col_class }}">
-        <main class="content__main-content clearfix" role="main">
+        <main class="content__main-content {{ content_class }} clearfix" role="main">
           <div class="visually-hidden"><a id="main-content" tabindex="-1"></a></div>
           {% if page.highlighted %}
             {{ page.highlighted }}
