Add menu block module patch. Update side menu styling.

--- a/web/themes/custom/commerce_2_demo/sass/custom/_content.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_content.scss
@@ -65,8 +65,13 @@
     }
   }
 
+  .block-menu {
+    margin-top: 10px;
+  }
+
   .menu {
     margin: 0;
+    border-top: 1px solid $gray;
   }
   .menu__item {
     display: block;
