--- a/web/themes/custom/commerce_2_demo/templates/email/swiftmailer.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/email/swiftmailer.html.twig
@@ -34,7 +34,7 @@
 {# Can also use this for local server path: {{ site_path ~ directory }} #}
 {% set image_path = site_path ~ directory ~ '/gfx/email/' %}
 {# Set CSS variables. #}
-{% set body_css = 'margin: 0; padding: 0; width: 100%; background-color: #f5f5f5;' %}
+{% set body_css = 'margin: 0; padding: 0; width: 100%; background-color: #efefef;' %}
 {% set table_td_css = 'border-collapse: collapse;' %}
 <html>
 <head>
@@ -62,10 +62,10 @@
       margin: 0 0 10px 0;
       padding: 0;
       font-family: Arial, sans-serif;
-      font-size: 34px;
-      font-weight: bold;
+      font-size: 40px;
+      font-weight: normal;
       line-height: 100%;
-      color: #666666;
+      color: #333333;
       text-align: left;
     }
 
@@ -78,7 +78,7 @@
       font-size: 30px;
       font-weight: bold;
       line-height: 100%;
-      color: #666666;
+      color: #cc0000;
       text-align: left;
     }
 
@@ -91,12 +91,12 @@
       font-size: 26px;
       font-weight: bold;
       line-height: 100%;
-      color: #666666;
+      color: #cc0000;
       text-align: left;
     }
 
-    h3,
-    .h3 {
+    h4,
+    .h4 {
       display: block;
       margin: 0 0 10px 0;
       padding: 0;
@@ -104,14 +104,14 @@
       font-size: 22px;
       font-weight: bold;
       line-height: 100%;
-      color: #666666;
+      color: #cc0000;
       text-align: left;
     }
 
     .body-content div {
       font-family: Arial, sans-serif;
       font-size: 18px;
-      color: #666666;
+      color: #333333;
       line-height: 150%;
       text-align: left;
     }
@@ -119,7 +119,7 @@
     .body-content div a:link,
     .body-content div a:visited, /* Yahoo! Mail Override. */
     .body-content div a .yshortcuts /* Yahoo! Mail Override. */ {
-      color: #be1e2d;
+      color: #cc0000;
       font-weight: normal;
       text-decoration: none;
     }
@@ -132,7 +132,7 @@
 </head>
 <body style="{{ body_css }}">
 <center>
-  <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" style="width: 100%; height: 100%; margin: 0; padding: 0; background-color: #f5f5f5;">
+  <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" style="width: 100%; height: 100%; margin: 0; padding: 0; background-color: #efefef;">
     <tr>
       <td align="center" valign="top" style="{{ table_td_css }}">
         <br /><br />
@@ -148,27 +148,30 @@
                       <tr>
                         <td valign="top" style="{{ table_td_css }}">
                           <div>
-                            <br ><br >
+                            <br >
                             {{ body }}
-                            <br /><br />
+                            <br />
 
                             {# Footer. #}
                             <table border="0" cellpadding="0" cellspacing="0" width="100%">
                               <tr>
-                                <td valign="top" style="border-collapse: collapse; padding: 20px 0 0 0; border-top: 1px solid #e6e6e6;">
+                                <td valign="top" style="border-collapse: collapse; padding: 20px 0 0 0; border-top: 1px solid #e6e6e6; text-align: center;">
                                   <a href="{{ site_path }}"><img src="{{ image_path }}logo.png" alt="{{ 'Logo'|t }}" /></a>
                                 </td>
                               </tr>
                               {# Social media links. #}
                               <tr>
-                              <td valign="top" style="border-collapse: collapse; padding: 5px 0 10px 0;">
-                              <a href="https://www.facebook.com" style="text-decoration: none;"><img src="{{ image_path }}icon_facebook.gif" alt="{{ 'Facebook'|t }}" title="{{ 'Follow us on Facebook.'|t }}" style="border: none;" /></a>
-                              <a href="https://twitter.com" style="text-decoration: none;"><img src="{{ image_path }}icon_twitter.gif" alt="{{ 'Twitter'|t }}" title="{{ 'Follow us on Twitter.'|t }}" style="border: none;" /></a>
-                              <a href="https://www.instagram.com" style="text-decoration: none;"><img src="{{ image_path }}icon_instagram.gif" alt="{{ 'Instagram'|t }}" title="{{ 'Follow us on Instagram.'|t }}" style="border: none;" /></a>
+                              <td valign="top" style="border-collapse: collapse; padding: 5px 0 10px 0; text-align: center;">
+                              <a href="https://www.facebook.com" style="text-decoration: none;"><img src="{{ image_path }}icon_facebook.png" alt="{{ 'Facebook'|t }}" title="{{ 'Follow us on Facebook.'|t }}" style="border: none;" /></a>&nbsp;
+                              <a href="https://twitter.com" style="text-decoration: none;"><img src="{{ image_path }}icon_twitter.png" alt="{{ 'Twitter'|t }}" title="{{ 'Follow us on Twitter.'|t }}" style="border: none;" /></a>&nbsp;
+                              <a href="https://youtube.com" style="text-decoration: none;"><img src="{{ image_path }}icon_youtube.png" alt="{{ 'YouTube'|t }}" title="{{ 'Follow us on YouTube.'|t }}" style="border: none;" /></a>&nbsp;
+                              <a href="https://plus.google.com" style="text-decoration: none;"><img src="{{ image_path }}icon_googleplus.png" alt="{{ 'Google Plus'|t }}" title="{{ 'Follow us on Google Plus.'|t }}" style="border: none;" /></a>&nbsp;
+                              <a href="https://www.instagram.com" style="text-decoration: none;"><img src="{{ image_path }}icon_instagram.png" alt="{{ 'Instagram'|t }}" title="{{ 'Follow us on Instagram.'|t }}" style="border: none;" /></a>&nbsp;
+                              <a href="https://pinterest.com" style="text-decoration: none;"><img src="{{ image_path }}icon_pinterest.png" alt="{{ 'Pinterest'|t }}" title="{{ 'Follow us on Pinterest.'|t }}" style="border: none;" /></a>
                               </td>
                               </tr>
                               <tr>
-                                <td valign="top" style="border-collapse: collapse; padding: 0; font-family: Arial, sans-serif; font-size: 12px; color: #999999;">
+                                <td valign="top" style="border-collapse: collapse; padding: 0; font-family: Arial, sans-serif; font-size: 12px; color: #999999; text-align: center;">
                                   {{ 'Copyright'|t }} &copy; {{ 'now'|date('Y') }} <a href="{{ site_path }}" style="font-family: Arial, sans-serif; font-size: 12px; color: #999999; text-decoration: none; font-weight: normal;">{{ site_name }}</a>
                                 </td>
                               </tr>
