--- a/web/themes/custom/commerce_2_demo/sass/custom/_general.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_general.scss
@@ -359,6 +359,10 @@ a {
   border: 1px solid #ccc;
   border-top: none;
 
+  @media (max-width: $screen-xs-max) {
+    padding: 20px;
+  }
+
   // Removes top margin if heading is the first element in content.
   .field--name-body {
     &>h1:first-child,
