--- a/web/themes/custom/commerce_2_demo/templates/comment/comment.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/comment/comment.html.twig
@@ -74,29 +74,32 @@
     status != 'published' ? status,
     comment.owner.anonymous ? 'by-anonymous',
     author_id and author_id == commented_entity.getOwnerId() ? 'by-' ~ commented_entity.getEntityTypeId() ~ '-author',
+    parent ? 'comment--reply' : 'comment--parent',
   ]
 %}
-<article{{ attributes.addClass(classes) }}>
-  {#
-    Hide the "new" indicator by default, let a piece of JavaScript ask the
-    server which comments are new for the user. Rendering the final "new"
-    indicator here would break the render cache.
-  #}
-  <mark class="hidden" data-comment-timestamp="{{ new_indicator_timestamp }}"></mark>
 
-  <header class="comment__header">
+<article{{ attributes.addClass(classes) }}>
+  <div{{ content_attributes.addClass('content') }}>
+    <mark class="hidden" data-comment-timestamp="{{ new_indicator_timestamp }}"></mark>
+
     <div class="comment__author">
       {% set author_warning = comment.owner.anonymous ? '(not verified)'|t %}
-      {% if comment.name.value %}
+
+      {% if content.field_review_name %}
+        {{ content.field_review_name }}
+      {% elseif comment.name.value %}
         {{ comment.name.value }} {{ author_warning }}
       {% else %}
         {{ 'Anonymous'|t }} {{ author_warning }}
       {% endif %}
     </div>
-    <div class="comment__date-created">{{ created }}</div>
-  </header>
 
-  <div{{ content_attributes.addClass('content') }}>
-    {{ content }}
+    <div class="comment__created">
+      {{ created }}
+    </div>
+
+    <div class="comment__content">
+      {{ content|without('field_review_name') }}
+    </div>
   </div>
 </article>
