--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-checkout-completion-message.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-checkout-completion-message.html.twig
@@ -26,9 +26,31 @@
     <h2>{{ 'Your downloads'|t }}</h2>
     <div class="checkout-complete__digital">
       {% for order_item in order_items %}
-        {% for file in order_item.purchased_entity %}
-          <a href="{{ file_url(file.entity.field_file.entity.fileuri) }}" class="checkout-complete__file" title="{{ file.entity.title.value }}">
-            {{ file.entity.title.value }}
+        {# Enter the purchased entity. #}
+        {% for purchased_entity in order_item.purchased_entity %}
+          {# Media manager album files referenced within Product Variation.  #}
+          {% for album_entity in purchased_entity.entity.field_album %}
+            {% for media_entity in album_entity.entity.field_media_audio_file_1 %}
+              {# Default audio formatter doesn't let you show the file description OR include a download link. So we have to do it this way. #}
+              <div class="audio__item">
+                {% if media_entity.value.description|length > 0 %}
+                  <div class="audio__title"><span class="loop-index">{{ loop.index }}</span>{{ media_entity.value.description }}</div>
+                {% endif %}
+
+                <div class="audio__player">
+                  <audio src="{{ file_url(media_entity.entity.fileuri) }}" preload="auto" controls></audio>
+                </div>
+
+                <a href="{{ file_url(media_entity.entity.fileuri) }}" class="audio__download" title="{{ 'Download your copy'|t }}">
+                  <i class="fa fa-cloud-download"></i>
+                </a>
+              </div>
+            {% endfor %}
+          {% endfor %}
+
+          {# Files uploaded within Product Variation. #}
+          <a href="{{ file_url(purchased_entity.entity.field_file.entity.fileuri) }}" class="checkout-complete__file" title="{{ purchased_entity.entity.title.value }}">
+            {{ purchased_entity.entity.title.value }}
           </a>
         {% endfor %}
       {% endfor %}
