--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
@@ -183,7 +183,7 @@
         <div class="additional-details">
           {# Tabs. #}
           <ul id="product-tabs" class="nav nav-tabs" role="tablist">
-            {% if product.body|render|trim is not empty %}
+            {% if product.body|render|trim is not empty or product.field_album_samples|render|trim is not empty %}
               <li role="presentation">
                 <a href="#description" aria-controls="description" role="tab" data-toggle="tab">
                   {{ 'Description'|t }}
@@ -211,6 +211,28 @@
             {% if product.body|render|trim is not empty %}
               <div role="tabpanel" class="tab-pane fade" id="description">
                 {{ product.body }}
+
+                {% if product.field_album_samples|render|trim is not empty %}
+                  <h2>{{ 'Samples'|t }}</h2>
+
+                  {# Loop through all media files. #}
+                  {% for media_entity in product_entity.field_album_samples.entity.field_media_audio_file %}
+                    {# Default audio formatter doesn't let you show the file description OR include a download link. So we have to do it this way. #}
+                    <div class="audio__item">
+                      {% if media_entity.value.description|length > 0 %}
+                        <div class="audio__title"><span class="loop-index">{{ loop.index }}</span>{{ media_entity.value.description }}</div>
+                      {% endif %}
+
+                      <div class="audio__player">
+                        <audio src="{{ file_url(media_entity.entity.fileuri) }}" preload="auto" controls></audio>
+                      </div>
+
+                      <a href="{{ file_url(media_entity.entity.fileuri) }}" class="audio__download" title="{{ 'Download sample'|t }}">
+                        <i class="fa fa-cloud-download"></i>
+                      </a>
+                    </div>
+                  {% endfor %}
+                {% endif %}
               </div>
             {% endif %}
 
