Add additional files for Feature Beacon update

--- a/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
@@ -225,6 +225,12 @@
   </div>
 </div>
 
+{# Feature Beacon. #}
+{% if page.feature_beacon %}
+  {{ page.feature_beacon }}
+{% endif %}
+{# / Feature Beacon. #}
+
 {% if page.access_gate %}
 {# Access Gate Modal Block #}
  {{ page.access_gate }}
