Move block SCSS files into block dir. Update Access Gate selector. Add Feature Beacon stylesheet.

--- a/web/themes/custom/commerce_2_demo/sass/custom/style.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/style.scss
@@ -10,7 +10,7 @@
 @import 'navigation';
 @import 'content';
 @import 'comments';
-@import 'blocks';
+@import 'blocks/blocks';
 @import 'paragraphs';
 
 // Pages.
@@ -27,6 +27,8 @@
 
 // Misc.
 @import 'misc';
+@import 'blocks/uh-feature-beacon';
+@import 'blocks/uh-access-gate';
 @import 'hubspot';
 
 // Live CSS.
