--- a/web/themes/custom/commerce_2_demo/templates/block/block--type--access-gate.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/block/block--type--access-gate.html.twig
@@ -53,7 +53,7 @@
     {% set gate_sources = 'fullgate' %}
   {% endif %}
 
-  <div class="modal fade" id="accessGate" data-gate-sources="{{ gate_sources }}" tabindex="-1" role="dialog" aria-label="{{ 'Access the Drupal Commerce demo'|t }}">
+  <div class="modal fade access-gate" data-gate-sources="{{ gate_sources }}" tabindex="-1" role="dialog" aria-label="{{ 'Access the Drupal Commerce demo'|t }}">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-body">
