--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
@@ -612,6 +612,42 @@
   }
 }
 
+// File/Audio Download.
+.audio__item {
+  display: block;
+  //border-bottom: 1px solid #ccc;
+  padding: 10px 0;
+
+  audio {
+    width: 100%;
+  }
+
+  .audio__title {
+    margin-bottom: 10px;
+
+    .loop-index {
+      display: inline-block;
+      vertical-align: top;
+      width: 20px;
+      height: 20px;
+      margin: 2px 5px 0 0;
+      background-color: $c-primary;
+      border-radius: 50%;
+      line-height: 20px;
+      text-align: center;
+      font-size: 14px;
+      font-weight: 700;
+      color: #fff;
+    }
+
+    span {
+      display: inline-block;
+      vertical-align: top;
+    }
+  }
+}
+
+
 /**
  * Product add-ons.
  */
